hphp/test/vm/dv_if.php.exp
HipHop Fatal error: Default value for parameter a0 with type Double needs to have the same type as the type hint int in hphp/test/vm/dv_if.php on line 3
