hphp/test/vm/dv_if.php
<?php
class A {
  public function a(int $a0 = 2.0) {}
}

